# Gangbro-client

./: Dockerfile  README.md  TECH_STACK.md  package-lock.json  package.json
server/: Cargo.toml  Dockerfile  diesel.toml
server/api-tests/: brawler.http  crew-operation.http  default-test.http  mission-management.http  mission-operation.http  mission-viewing.http  register.http
server/src/: main.rs
server/src/application/use_cases/: authentication.rs  brawlers.rs  crew_operation.rs  mission_chat.rs  mission_management.rs  mission_operation.rs  mission_viewing.rs  mod.rs  system.rs
server/src/config/: config_loader.rs  config_model.rs  stage.rs
server/src/domain/entities/: brawlers.rs  crew_memberships.rs  missions.rs
server/src/domain/repositories/: brawlers.rs  crew_operation.rs  mission_chat.rs  mission_management.rs  mission_operation.rs  mission_viewing.rs  mod.rs  system.rs
server/src/domain/value_objects/: base64_image.rs  brawler_model.rs  mission_chat_model.rs  mission_filter.rs  mission_model.rs  mission_statuses.rs  mod.rs  system_stats.rs  uploaded_image.rs
server/src/infrastructure/: mod.rs
server/src/infrastructure/cloudinary/: mod.rs
server/src/infrastructure/database/: mod.rs  postgresql_connection.rs  (+1 more)
server/statics/: chunk-B24RJYVP.js  chunk-EIUVH7MX.js  chunk-HLWTWR3J.js  chunk-I7657AA7.js  chunk-LXLSXBKB.js  chunk-Q3JY5LY2.js  chunk-WFEKMZS2.js  chunk-XI2BQRHN.js  chunk-XJJXJGTC.js  chunk-YIDD3TCR.js  index.html  main-CD7GEBWM.js  main-GRGRRAHI.js  main-OYIDNC3A.js  manifest.webmanifest  styles-JHBMZURP.css  styles-YTTDRCDB.css
(+135 files in other folders)
