[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
argon2 = { version = "0.5.3", features = ["password-hash", "rand", "std"] }
async-trait = "0.1.89"
axum = {version ="0.8.6" , features = [ "macros", "ws"]}
axum-extra = { version = "0.12.1", features = ["cookie", "typed-header"] }
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }
cloudinary = "0.8.2"
cookie = "0.18.1"
dashmap = "6.1.0"
diesel = { version = "2.3.3", features = ["postgres", "serde_json", "chrono", "r2d2"] }
diesel_migrations = { version = "2.3.1", features = ["postgres"] }
dotenvy = "0.15.7"
futures-util = "0.3.31"
infer = "0.19.0"
jsonwebtoken = { version = "10.1.0", features = ["aws_lc_rs"] }
mockall = "0.14.0"
reqwest = "0.12.26"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha1 = "0.10.6"
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
